--- a/epam-theme/templates/base.html
+++ b/epam-theme/templates/base.html
@@ -146,7 +146,7 @@
     <script type="text/javascript"  src="{{ js }}"></script>
     {% endfor %}
   {% endif %}
-  {% include 'partials/analytics.js' %}
-  {% include 'partials/disqus.js' %}
+  {% include 'partials/analytics.js.j2' %}
+  {% include 'partials/disqus.js.j2' %}
 </body>
 </html>
