--- a/epam-theme/templates/partials/disqus.js.j2
+++ b/epam-theme/templates/partials/disqus.js.j2
@@ -11,7 +11,7 @@
             var d = document, s = d.createElement('script');
 
             // IMPORTANT: Replace EXAMPLE with your forum shortname!
-            s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+            s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
 
             s.setAttribute('data-timestamp', +new Date());
             (d.head || d.body).appendChild(s);
